@@ -1,3 +1,9 @@
+
+
+2020-08-21 Franz Holzinger <franz@ttproducts.de>
+
+    * new feature: If no storagePid has been set, then the records of all pages of the tx_ratings_data table should be used by Ajax.
+
 2020-08-13 Franz Holzinger <franz@ttproducts.de>
 
     * new feature: add fields hidden and deleted
